--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >-
   A personal blog by Alexis Olson. Thoughts, experiments, and things I'm working on.
   
 # Theme from GitHub Pages Themes
-remote_theme: pages-themes/midnight@v0.2.0
+remote_theme: pages-themes/slate@v0.2.0
 
 # Enable GitHub Pages remote themes
 plugins:
