--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-title: To Be Determined
+title: Adventures in Analysis
 author: Alexis Olson
-description: >-
-  A personal blog by Alexis Olson. Thoughts, experiments, and things I'm working on.
+description: An exploration in math, analytics, code, and BI 
 
 # Theme from GitHub Pages Themes
 remote_theme: pages-themes/slate@v0.2.0
