Add nav to config

--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,11 @@ plugins:
 # Build settings
 markdown: kramdown
 highlighter: rouge
+
+nav:
+  - title: Home
+    url: /
+  - title: Blog
+    url: /blog/
+  - title: About
+    url: /about/
